kubedoom.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedoom
  namespace: kubedoom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedoom
  template:
    metadata:
      labels:
        app: kubedoom
    spec:
      containers:
        - name: kubedoom
          image: storaxdev/kubedoom:0.5.0
          ports:
            - containerPort: 5900
              protocol: TCP
          hostNetwork: true
      serviceAccountName: kubedoom
      terminationGracePeriodSeconds: 0
# Зададим стратегию, для выполнения условия, что в деплойменте должна быть одна реплика, при этом при обновлении образа не должно одновременно работать две реплики.
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
