service_database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
